--- a/doyoulikeit/templates/base.html
+++ b/doyoulikeit/templates/base.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html lang="en">
-<head>
-    <title>{% block title %}Do you like it?{% endblock %}</title>
-</head>
+    <head>
+        <title>{% block title %}Do you like it?{% endblock %}</title>
+        <link rel="stylesheet" type="text/css" href="{% static 'css/reset.css' %}" />
+        <link rel="stylesheet" type="text/css" href="{% static 'css/semantic.css' %}" />
+        <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
+    </head>
 
-<body>
-{% block content %}{% endblock %}
-</body>
+    <body>
+        {% block content %}{% endblock %}
+    </body>
 </html>
