Fleshed out voting feature, but having some fiddliness over the URL to POST to when the user is anonymous.

--- a/doyoulikeit/static/css/style.css
+++ b/doyoulikeit/static/css/style.css
@@ -25,3 +25,9 @@ p {
     font-size: 0.8rem;
 }
 
+form {
+    max-width: 40em;
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 1em;
+}
