--- a/things/templates/thing.html
+++ b/things/templates/thing.html
@@ -1,8 +1,18 @@
 {% extends "base.html" %}
 
 {% block content %}
+
 <article itemscope itemtype="http://schema.org/Thing" itemid="{{ thing.pk }}">
-  <h1 itemprop="http://schema.org/name" class="ui header">{{ thing.rdfs_label }}</h1>
-  <p itemprop="http://schema.org/description">{{ thing.rdfs_comment }}</p>
+
+    <form action="{{ request.get_full_path }}/likes/{{user_id}}" method="post">
+        {% csrf_token %}
+        <input type="submit" value="Yes" class="ui animated fade button"/>
+    </form>
+
+    <h1 itemprop="http://schema.org/name" class="ui header">{{ thing.rdfs_label}}</h1>
+
+    <p itemprop="http://schema.org/description">{{ thing.rdfs_comment }}</p>
+
 </article>
+
 {% endblock %}
