Finally at a point where there's a failure for a good reason: the Yes button needs to go away if the user has voted already.

--- a/doyoulikeit/templates/base.html
+++ b/doyoulikeit/templates/base.html
@@ -9,6 +9,9 @@
     </head>
 
     <body>
+        <header>
+            Hello, {{ user.username }}
+        </header>
         {% block content %}{% endblock %}
     </body>
 </html>
