--- a/doyoulikeit/templates/base.html
+++ b/doyoulikeit/templates/base.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" type="text/css" href="{% static 'css/reset.css' %}" />
         <link rel="stylesheet" type="text/css" href="{% static 'css/semantic.css' %}" />
         <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
+	<script src="{% static 'js/semantic.js' %}"></script>
     </head>
 
     <body>
