--- a/doyoulikeit/static/css/style.css
+++ b/doyoulikeit/static/css/style.css
@@ -49,3 +49,15 @@ article img.depiction {
     margin-bottom: 1em;
     max-height: 200px;
 }
+
+.ui.large.labels {
+    text-align: center;
+}
+
+.ui.label:first-child {
+    margin-left: 0.2em;
+}
+
+body > article > div > div.active.content > ul > li {
+    margin: 0.2em;
+}
