--- a/things/templates/thing.html
+++ b/things/templates/thing.html
@@ -13,32 +13,48 @@
     </form>
   {% endif %}
 
-  <h1 itemprop="http://schema.org/name" class="ui header">{{ thing.schema_name }}</h1>
+  <h1 itemprop="http://schema.org/name" class="ui header">{{ thing.schema_name|first }}</h1>
 
-  {% if thing.schema_thumbnailUrl and thing.schema_image %}
-    <a href="{{ thing.schema_image }}" itemprop="http://schema.org/image">
-  {% endif %}
   {% if thing.schema_thumbnailUrl %}
     <img class="depiction" itemprop="http://schema.org/thumbnailUrl" src="{{ thing.schema_thumbnailUrl }}"/>
   {% endif %}
-  {% if thing.schema_thumbnailUrl and thing.schema_image %}
-    </a>
-  {% endif %}
 
   {% if thing.schema_description %}
-    <p itemprop="http://schema.org/description">{{ thing.schema_description }}</p>
+    <p class="ui segment" itemprop="http://schema.org/description">{{ thing.schema_description|first }}</p>
   {% endif %}
 
+
 <div class="ui fluid accordion links">
+{% if thing.schema_actor_of %}
   <div class="active title">
     <i class="dropdown icon"></i>
     Starred in
   </div>
   <div class="active content">
-    <ul>
-      Wild Things
+    <ul class="ui large labels">
+        {% for work in thing.schema_actor_of %}
+            {% if work.schema_name %}
+            <li class="ui label"><a href="{{ work.get_absolute_url }}">{{ work.schema_name|first }}</a></li>
+            {% endif %}
+        {% endfor %}
     </ul>
   </div>
+{% endif %}
+{% if thing.schema_actor %}
+  <div class="active title">
+    <i class="dropdown icon"></i>
+    Starred
+  </div>
+  <div class="active content">
+    <ul class="ui large labels">
+        {% for actor in thing.schema_actor %}
+            {% if actor.schema_name %}
+            <li class="ui label"><a href="{{ actor.get_absolute_url }}">{{ actor.schema_name|first }}</a></li>
+            {% endif %}
+        {% endfor %}
+    </ul>
+  </div>
+{% endif %}
 </div>
 
 </article>
