--- a/things/templates/thing.html
+++ b/things/templates/thing.html
@@ -34,7 +34,7 @@
     <ul class="ui large labels">
         {% for work in thing.schema_actor_of %}
             {% if work.schema_name %}
-            <li class="ui label"><a href="/things/bounce?iri={{work}}">{{ work.schema_name|first }}</a></li>
+            <li class="ui label"><a href="/things/bounce?iri={{work}}">{{ work.schema_name.any }}</a></li>
             {% endif %}
         {% endfor %}
     </ul>
@@ -49,11 +49,10 @@
     <ul class="ui large labels">
         {% for actor in thing.schema_actor %}
             {% if actor.schema_name %}
-            <li class="ui label"><a href="{{ actor.get_absolute_url }}">{{ actor.schema_name|first }}</a></li>
+            <li class="ui label"><a href="{{ actor.get_absolute_url }}">{{ actor.schema_name.any }}</a></li>
             {% endif %}
         {% endfor %}
     </ul>
-    {% endfor %}
   </div>
 {% endif %}
 </div>
