--- a/static/css/style.less
+++ b/static/css/style.less
@@ -1,23 +1,53 @@
 @import url(http://fonts.googleapis.com/css?family=Gloria+Hallelujah);
 @import url(http://fonts.googleapis.com/css?family=Raleway);
+@import 'grid.less';
 
-header p.siteheader {
-    float: right;
+@column-width: 60;
+@gutter-width: 20;
+@columns: 12;
+@total-width: 100%;
+
+
+header {
+    >p.ui.header {
+        font-family: 'Gloria Hallelujah', cursive;
+        .column(7);
+    }
+    >nav {
+        .column(5);
+    }
+}
+
+body {
+    font-family: 'Raleway', sans-serif;
+}
+
+article > div.ui.card {
+    margin: 0 auto;
+    .column(12);
+    .push(0);
+
+    form[name=like] {
+        .column(12);
+        text-align: center;
+        margin-bottom: 1em;
+
+        input.ui.button {
+            font-family: 'Raleway', sans-serif;
+        }
+    }
+
+    img {
+        margin: 0 auto;
+    }
+}
+
+article > div.ui.card h1.header {
     text-align: center;
     font-family: 'Gloria Hallelujah', cursive;
-    font-size: 1.6rem;
-    margin: 1em;
 }
 
-article {
-    margin-top: 1em;
-    font-family: 'Raleway', sans-serif;
-    max-width: 40em;
-    margin: 0 auto;
-    padding-left: 0.5em;
-    padding-right: 0.5em;
-}
-
+/*
 h1 {
     text-align: center;
     font-family: 'Gloria Hallelujah', cursive;
@@ -61,3 +91,4 @@ article img.depiction {
 body > article > div > div.active.content > ul > li {
     margin: 0.2em;
 }
+*/
