--- a/templates/thing.html
+++ b/templates/thing.html
@@ -2,61 +2,63 @@
 
 {% block content %}
 
-<article itemscope itemtype="http://schema.org/Thing" itemid="{{ thing.iri }}">
-  
-  {% if already_voted %}
-    <p>You like it.</p>
-  {% else %}
-    <form action="/things/{{ thing.pk }}/likes/{{user_id}}" method="post" name="like">
-      {% csrf_token %}
-      <input type="submit" value="Yes" class="ui animated fade button"/>
-    </form>
-  {% endif %}
-
-  <h1 itemprop="http://schema.org/name" class="ui header">{{ thing.schema_name|first }}</h1>
-
-  {% if thing.schema_thumbnailUrl %}
-    <img class="depiction" itemprop="http://schema.org/thumbnailUrl" src="{{ thing.schema_thumbnailUrl }}"/>
-  {% endif %}
-
-  {% if thing.schema_description %}
-    <p class="ui segment" itemprop="http://schema.org/description">{{ thing.schema_description|first }}</p>
-  {% endif %}
+<article resource="{{ thing.iri }}">
+    <div class="ui card">
 
 
-<div class="ui fluid accordion links">
-{% if thing.schema_actor_of %}
-  <div class="active title">
-    <i class="dropdown icon"></i>
-    Starred in
-  </div>
-  <div class="active content">
-    <ul class="ui large labels">
-        {% for work in thing.schema_actor_of %}
-            {% if work.schema_name %}
-            <li class="ui label"><a href="/things/bounce?iri={{work}}">{{ work.schema_name.any }}</a></li>
+        {% if already_voted %}
+        <h1 property="name" class="header">You like {{ thing.schema_name|first }}</h1>
+        {% else %}
+        <h1 property="name" class="header">Do you like {{ thing.schema_name|first }}?</h1>
+        <form action="/things/{{ thing.pk }}/likes/{{user_id}}" method="post" name="like">
+            {% csrf_token %}
+            <input type="submit" value="Yes" class="ui green fade button thumbs up"/>
+        </form>
+        {% endif %}
+
+        {% if thing.schema_thumbnailUrl %}
+        <img class="image" property="thumbnailUrl" src="{{ thing.schema_thumbnailUrl }}"/>
+        {% endif %}
+
+        {% if thing.schema_description %}
+        <p class="content" property="description">{{ thing.schema_description|first }}</p>
+        {% endif %}
+
+
+        <div class="ui fluid accordion links">
+            {% if thing.schema_actor_of %}
+            <div class="active title">
+                <i class="dropdown icon"></i>
+                Starred in
+            </div>
+            <div class="active content">
+                <ul class="ui large labels">
+                    {% for work in thing.schema_actor_of %}
+                    {% if work.schema_name %}
+                    <li class="ui label"><a href="/things/bounce?iri={{work}}">{{ work.schema_name.any }}</a></li>
+                    {% endif %}
+                    {% endfor %}
+                </ul>
+            </div>
             {% endif %}
-        {% endfor %}
-    </ul>
-  </div>
-{% endif %}
-{% if thing.schema_actor %}
-  <div class="active title">
-    <i class="dropdown icon"></i>
-    Starred
-  </div>
-  <div class="active content">
-    <ul class="ui large labels">
-        {% for actor in thing.schema_actor %}
-            {% if actor.schema_name %}
-            <li class="ui label"><a href="{{ actor.get_absolute_url }}">{{ actor.schema_name.any }}</a></li>
+            {% if thing.schema_actor %}
+            <div class="active title">
+                <i class="dropdown icon"></i>
+                Starred
+            </div>
+            <div class="active content">
+                <ul class="ui large labels">
+                    {% for actor in thing.schema_actor %}
+                    {% if actor.schema_name %}
+                    <li class="ui label"><a href="{{ actor.get_absolute_url }}">{{
+                        actor.schema_name.any }}</a></li>
+                    {% endif %}
+                    {% endfor %}
+                </ul>
+            </div>
             {% endif %}
-        {% endfor %}
-    </ul>
-  </div>
-{% endif %}
-</div>
-
+        </div>
+    </div>
 </article>
 
 
