--- a/doyoulikeit/templates/base.html
+++ b/doyoulikeit/templates/base.html
@@ -18,12 +18,14 @@
             max-width: 40em;
             text-align: center;
         }
+
         article p {
             text-align: left;
         }
+
         article img {
             display: block;
-            margin: 0 auto;
+            margin: 1em auto 0;
             max-width: 100%;
             padding-bottom: 1em;
         }
@@ -33,6 +35,13 @@
 
 <header>
     <h1><a href="/">Do you like it?</a></h1>
+    {% if session %}
+        <h2>Welcome {{ session.userinfo.name }}!</h2>
+        <p><a href="/logout">Logout</a></p>
+    {% else %}
+        <h2>Welcome Guest</h2>
+        <p><a href="/login">Login</a></p>
+    {% endif %}
 </header>
 <main>{% block content %}{% endblock %}</main>
 </body>
